--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ go:
 # code in vendor/
 install: true
 
+os:
+  - linux
+
 matrix:
   # It's ok if our code fails on unstable development versions of Go.
   allow_failures:
@@ -34,9 +37,7 @@ before_script:
   - go get github.com/golang/lint/golint                        # Linter
   - go get honnef.co/go/tools/cmd/megacheck                     # Badass static analyzer/linter
   - go get github.com/fzipp/gocyclo
-  - go get github.com/joho/godotenv
-  - go get github.com/mattevans/dinero
-  - go get github.com/joho/godotenv
+
 
 
 # script always run to completion (set +e). All of these code checks are must haves
@@ -48,3 +49,6 @@ script:
   - megacheck ./...                          # "go vet on steroids" + linter
   - gocyclo -over 19 $GO_FILES               # forbid code with huge functions
   - golint -set_exit_status $(go list ./...) # one last linter
+
+environment:
+  - OPEN_EXCHANGE_APP_ID=6dcf932844e64ba9a6adbb284eb71014
